[package]
name = "zipstream"
version = "1.0.1"
authors = ["Kevin Mehall <kevin.mehall@3drobotics.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
futures = "0.3.4"
bytes = "1.0"
regex = "1.0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = [ "server", "client", "client-legacy", "http1" ] }
hyper-tls = "0.6"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.6"
log-panics = "2.0.0"
env_logger = "0.10.0"
clap = { version="2", default-features = false }
lazy_static = "1.1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
jemallocator = "0.5.0"
jemalloc-sys = { version = "0.5.0", features = ["background_threads"] }

